--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ header {
    text-transform: capitalize;
    margin-bottom: var(--mb-1);
 }
-.projects-container .projects-content {
+.projects-content {
    gap: var(--mb-2);
    flex-direction: column;
    justify-content: center;
@@ -153,7 +153,7 @@ header {
 }
 .tech-used {
    display: flex;
-   gap: 1rem;
+   gap: var(--mb-1);
    list-style: none;
    flex-wrap: wrap;
    margin-top: var(--mb-2);
@@ -180,5 +180,18 @@ header {
       max-width: 400px;
       line-height: 1;
       padding-bottom: 1rem;
+   }
+   .projects-content-left,
+   .projects-content-right {
+      width: 50%;
+   }
+   .projects-content {
+      flex-direction: row;
+      display: flex;
+      flex-direction: row;
+      gap: var(--mb-6);
+   }
+   .projects-content:nth-child(odd) {
+      flex-direction: row-reverse;
    }
 }
