--- a/style.css
+++ b/style.css
@@ -165,9 +165,27 @@ header {
    font-size: 14px;
 }
 
+/* ==== tools ==== */
+.tools-wrapper {
+   grid-template-columns: repeat(3, auto);
+   justify-content: space-between;
+   margin-top: var(--mb-2);
+}
+.logs-container {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   gap: 5px;
+}
+.logs-container img {
+   width: 4rem;
+   height: 4rem;
+}
+
 /* ====ipad media queries==== */
 
 @media (min-width: 700px) {
+   /* ==== main ==== */
    .main_container {
       flex-direction: row-reverse;
    }
@@ -181,6 +199,7 @@ header {
       line-height: 1;
       padding-bottom: 1rem;
    }
+   /* ==== projects ==== */
    .projects-content-left,
    .projects-content-right {
       width: 50%;
@@ -193,5 +212,10 @@ header {
    }
    .projects-content:nth-child(odd) {
       flex-direction: row-reverse;
+   }
+
+   /* ==== tools ==== */
+   .tools-wrapper {
+      grid-template-columns: repeat(5, auto);
    }
 }
