--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ header {
    width: 100%;
    position: fixed;
    z-index: 1000;
+   top: 0;
 }
 
 .nav .menu {
@@ -108,6 +109,7 @@ header {
 /* ====main ==== */
 .main {
    height: calc(100vh - 3.5rem);
+   margin-top: 3.5rem;
 }
 .main_container {
    height: 100%;
