--- a/style.css
+++ b/style.css
@@ -168,6 +168,21 @@ header {
    font-size: 14px;
 }
 
+.projects .link {
+   display: flex;
+   flex-direction: row;
+   align-items: flex-end;
+   margin-top: var(--mb-2);
+}
+
+.projects .link a {
+   margin-right: 20px;
+   color: var(--text-color);
+   font-size: var(--h2-font-size);
+   padding: 0;
+   font-size: 1.5rem;
+}
+
 /* ==== tools ==== */
 .tools {
    margin-bottom: 4rem;
